--- a/vignette/www/abm-sacada.bib
+++ b/vignette/www/abm-sacada.bib
@@ -471,3 +471,45 @@ volume = {221},
 year = {2010}
 }
 
+@article{
+BazantBush2021,
+author = {Martin Z. Bazant  and John W. M. Bush },
+title = {A guideline to limit indoor airborne transmission of COVID-19},
+journal = {Proceedings of the National Academy of Sciences},
+volume = {118},
+number = {17},
+pages = {e2018995118},
+year = {2021},
+doi = {10.1073/pnas.2018995118},
+URL = {https://www.pnas.org/doi/abs/10.1073/pnas.2018995118},
+eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.2018995118},
+abstract = {The current revival of the American economy is being predicated on social distancing, specifically the Six-Foot Rule, a guideline that offers little protection from pathogen-bearing aerosol droplets sufficiently small to be continuously mixed through an indoor space. The importance of airborne transmission of COVID-19 is now widely recognized. While tools for risk assessment have recently been developed, no safety guideline has been proposed to protect against it. We here build on models of airborne disease transmission in order to derive an indoor safety guideline that would impose an upper bound on the "cumulative exposure time," the product of the number of occupants and their time in an enclosed space. We demonstrate how this bound depends on the rates of ventilation and air filtration, dimensions of the room, breathing rate, respiratory activity and face mask use of its occupants, and infectiousness of the respiratory aerosols. By synthesizing available data from the best-characterized indoor spreading events with respiratory drop size distributions, we estimate an infectious dose on the order of 10 aerosol-borne virions. The new virus (severe acute respiratory syndrome coronavirus 2 [SARS-CoV-2]) is thus inferred to be an order of magnitude more infectious than its forerunner (SARS-CoV), consistent with the pandemic status achieved by COVID-19. Case studies are presented for classrooms and nursing homes, and a spreadsheet and online app are provided to facilitate use of our guideline. Implications for contact tracing and quarantining are considered, and appropriate caveats enumerated. Particular consideration is given to respiratory jets, which may substantially elevate risk when face masks are not worn.}}
+
+@article{Buonanno2020,
+   author = {Buonanno, G. and Morawska, L. and Stabile, L.},
+   title = {Quantitative assessment of the risk of airborne transmission of SARS-CoV-2 infection: Prospective and retrospective applications},
+   journal = {Environ Int},
+   volume = {145},
+   pages = {106112},
+   ISSN = {1873-6750 (Electronic)
+0160-4120 (Linking)},
+   DOI = {10.1016/j.envint.2020.106112},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/32927282},
+   year = {2020},
+   type = {Journal Article}
+}
+
+@article{Morawska2009,
+title = {Size distribution and sites of origin of droplets expelled from the human respiratory tract during expiratory activities},
+journal = {Journal of Aerosol Science},
+volume = {40},
+number = {3},
+pages = {256-269},
+year = {2009},
+issn = {0021-8502},
+doi = {https://doi.org/10.1016/j.jaerosci.2008.11.002},
+url = {https://www.sciencedirect.com/science/article/pii/S0021850208002036},
+author = {L. Morawska and G.R. Johnson and Z.D. Ristovski and M. Hargreaves and K. Mengersen and S. Corbett and C.Y.H. Chao and Y. Li and D. Katoshevski},
+keywords = {Expiratory-aerosol, Size-distribution, Hygroscopic, Modality, Evaporation, Human respiratory tract},
+abstract = {A new expiratory droplet investigation system (EDIS) was used to conduct the most comprehensive program of study to date, of the dilution corrected droplet size distributions produced during different respiratory activities. Distinct physiological processes were responsible for specific size distribution modes. The majority of particles for all activities were produced in one or more modes, with diameters below 0.8??m at average concentrations up to 0.75cm???3. These particles occurred at varying concentrations, during all respiratory activities, including normal breathing. A second mode at 1.8??m was produced during all activities, but at lower concentrations of up to 0.14cm???3. Speech produced additional particles in modes near 3.5 and 5??m. These two modes became most pronounced during sustained vocalization, producing average concentrations of 0.04 and 0.16cm???3, respectively, suggesting that the aerosolization of secretions lubricating the vocal chords is a major source of droplets in terms of number. For the entire size range examined of 0.3-20??m, average particle number concentrations produced during exhalation ranged from 0.1cm???3 for breathing to 1.1cm???3 for sustained vocalization. Non-equilibrium droplet evaporation was not detectable for particles between 0.5 and 20??m, implying that evaporation to the equilibrium droplet size occurred within 0.8s.}
+}
